[package]
name = "linexus-logger"
version = "0.1.0"
edition = "2024"
authors = ["Linexus Collective"]
description = "Immutable Audit Trail — Segmented log, Demiurge append-only ledger, decay sweeper"
license = "MIT"
repository = "https://github.com/chuckles-the-dancing-clown91/linexus-logger"

[dependencies]
linexus-core = { git = "https://github.com/chuckles-the-dancing-clown91/linexus-core.git", branch = "main" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "v7", "serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
